src/test/deca/context/invalid/created/SansObjet/InvalidTypeNot.deca
// Resultats:
//    not.deca:3:8: Error: Incompatible type for operator '!' and type 'int'


{
    int a = 3;
    if (!a){
        print("ERRONE");
    }
    print("ok");
}